Go ham with the formatter (again)